--- a/FamilyTree/FamilyTree.csproj
+++ b/FamilyTree/FamilyTree.csproj
@@ -16,4 +16,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Home\Index - Copy.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
+
 </Project>
